--- a/src/app/admin/features/operator_Login/lco-change-password/lco-change-password.component.html
+++ b/src/app/admin/features/operator_Login/lco-change-password/lco-change-password.component.html
@@ -109,7 +109,7 @@
             <mat-form-field class="example-full-width w-100" appearance="outline">
                 <mat-label>New Password</mat-label>
                 <input matInput id="newpassword" name="newpassword" [type]="showNewPassword ? 'text' : 'password'"
-                    [(ngModel)]="newpassword" placeholder="Enter New Password" #newPass="ngModel" minlength="6"
+                    [(ngModel)]="newpassword" placeholder="Enter New Password" #newPass="ngModel"
                     required>
                 <mat-icon (click)="togglePassword('new')" style="color:#00728d;cursor: pointer;">
                     {{ showNewPassword ? 'visibility' : 'visibility_off' }}
