--- a/src/app/admin/features/vc/stc/stb-bill/stb-bill.component.html
+++ b/src/app/admin/features/vc/stc/stb-bill/stb-bill.component.html
@@ -288,7 +288,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-md-12 mb-3">
-                            <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight'
+                            <ag-grid-angular #agGrid id="myGrid" domLayout='normal'
                                 class="ag-theme-alpine table-class" rowAnimation [rowSelection]="rowSelection"
                                 [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
                                 (gridReady)="onGridReady($event)" [enableCellTextSelection]="true">
