--- a/src/app/admin/features/Bulk_operation/bulk-page-updation/bulk-page-updation.component.html
+++ b/src/app/admin/features/Bulk_operation/bulk-page-updation/bulk-page-updation.component.html
@@ -73,7 +73,7 @@
                             style="color: rgb(11, 67, 170);font-size: 20px;font-weight: 600;">-
                             {{rowData?.length}}</span></h5>
                 </div>
-                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class"
                     rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs"
                     [rowData]="rowData" (gridReady)="onGridReady($event)" [enableCellTextSelection]="true"
                     [rowSelection]="'multiple'" (selectionChanged)="onSelectionChanged()">
@@ -152,8 +152,8 @@
                             style="color: rgb(11, 67, 170);font-size: 20px;font-weight: 600;">-
                             {{rowData?.length}}</span></h5>
                 </div>
-                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
-                    style="max-height: 775px;overflow: scroll;" rowAnimation [rowSelection]="rowSelection"
+                <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class"
+                    rowAnimation [rowSelection]="rowSelection"
                     [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
                     [enableCellTextSelection]="true" (selectionChanged)="onSelectionChanged()">
                 </ag-grid-angular>
@@ -237,8 +237,8 @@
                     <h5>ARCHIVED LIST STATUS <span style="color: rgb(11, 67, 170);font-size: 20px;font-weight: 600;">-
                             {{rowData?.length}}</span> </h5>
                 </div>
-                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
-                    style="max-height: 775px;overflow: scroll;" rowAnimation [rowSelection]="rowSelection"
+                <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class"
+                    rowAnimation [rowSelection]="rowSelection"
                     [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
                     [enableCellTextSelection]="true">
                 </ag-grid-angular>
