--- a/src/app/admin/features/channel_setting/Reports_page/MSO/msor-dialogueports/msor-dialogueports.component.html
+++ b/src/app/admin/features/channel_setting/Reports_page/MSO/msor-dialogueports/msor-dialogueports.component.html
@@ -50,11 +50,12 @@
                             <span style="color: #243359;" for="">Reports</span>
                         </div>
                         <div class="col-6 col-md-6 display1">
-                            <div class="export-icon col-6 col-md-3 mx-2" >
+                            <div class="export-icon col-6 col-md-3 mx-2">
                                 <!-- <img src="/assets/images/icons/Excel.png" alt="Excel Icon" width="40px">
                                 <div class="tooltip">Submit</div> -->
-                                <button class="btn btn-primary me-2 bttn" (click)="getMonthwisePaymentCollectionData()">Submit</button>
-                 
+                                <button class="btn btn-primary me-2 bttn"
+                                    (click)="getMonthwisePaymentCollectionData()">Submit</button>
+
                             </div>
                             <div class="export-icon col-6 col-md-3 mx-2" (click)="monthwisePaymentCollectionExcel()">
                                 <img src="/assets/images/icons/Excel.png" alt="Excel Icon" width="40px">
@@ -315,7 +316,7 @@
                     </mat-form-field>
                 </div>
 
-                <div *ngIf="role !== 'ROLE_SUBLCO'" class="input_box me-3">
+                <div *ngIf="role !== 'ROLE_SUBLCO' && role != 'ROLE_SUBSCRIBER'" class="input_box me-3">
                     <div class="">
                         <input type="text" placeholder="Enter Smartcard" [(ngModel)]="smartcard"
                             [disabled]="!isSmartcard"
@@ -323,7 +324,8 @@
                     </div>
                 </div>
 
-                <div class="input_box me-3" *ngIf="role !== 'ROLE_OPERATOR' && role !== 'ROLE_SUBLCO' && role != 'ROLE_SUBSCRIBER'">
+                <div class="input_box me-3"
+                    *ngIf="role !== 'ROLE_OPERATOR' && role !== 'ROLE_SUBLCO' && role != 'ROLE_SUBSCRIBER'">
                     <div class="input-container">
                         <input type="text" matInput [matAutocomplete]="auto" [(ngModel)]="selectedLcoName"
                             [disabled]="!isRechargeOperator" (input)="filterOperators($event)"
