--- a/src/app/admin/features/channel_setting/broad-master/broad-master.component.html
+++ b/src/app/admin/features/channel_setting/broad-master/broad-master.component.html
@@ -22,16 +22,13 @@
                         </button>
                     </div>
                 </div>
-           
-                <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class"
-                     rowAnimation
+                <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class" rowAnimation
                     [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs"
                     [rowData]="rowData" (selectionChanged)="onSelectionChanged()" (gridReady)="onGridReady($event)"
                     [enableCellTextSelection]="true">
                 </ag-grid-angular>
             </div>
             <div class=" col-md-2 col-lg-2"></div>
-
         </div>
     </div>
 </div>
