--- a/src/app/admin/features/inventory/insert-sub/insert-sub.component.html
+++ b/src/app/admin/features/inventory/insert-sub/insert-sub.component.html
@@ -42,7 +42,7 @@
                     <i class="fa  fa-plus" aria-hidden="true"></i> ALLOCATED
                 </button>
             </div>
-            <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class" rowAnimation style="max-height: 775px;overflow: scroll;"
+            <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class" rowAnimation 
                 [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
                 (selectionChanged)="onSelectionChanged($event)" (gridReady)="onGridReady($event)"
                 [enableCellTextSelection]="true">
