--- a/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
+++ b/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
@@ -45,7 +45,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-md-5 d-flex justify-content-end align-item-center online_recharge">
+        <div *ngIf="operatorDetailsCount.isonlinepayment" class="col-12 col-md-5 d-flex justify-content-end align-item-center online_recharge">
             <div class="col-12 col-lg-12  mb-3">
                 <div class="card box d-flex flex-column justify-content-between align-items-center "
                     style="background: linear-gradient(180deg, #c44205, #9c4a01);" (click)="onOnlineRecharge()">
