--- a/src/app/admin/features/special_role/Bulk operaton/special-bulkpackage/special-bulkpackage.component.html
+++ b/src/app/admin/features/special_role/Bulk operaton/special-bulkpackage/special-bulkpackage.component.html
@@ -60,7 +60,7 @@
                             style="color: rgb(11, 67, 170);font-size: 20px;font-weight: 600;">-
                             {{rowData?.length}}</span></h5>
                 </div>
-                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                <ag-grid-angular #agGrid id="myGrid" domLayout='normal' 
                     rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs"
                     [rowData]="rowData" (gridReady)="onGridReady()" [enableCellTextSelection]="true">
                 </ag-grid-angular>
@@ -123,7 +123,7 @@
                             style="color: rgb(11, 67, 170);font-size: 20px;font-weight: 600;">-
                             {{rowData?.length}}</span></h5>
                 </div>
-                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class"
                     rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs"
                     [rowData]="rowData" (gridReady)="onGridReady()" [enableCellTextSelection]="true">
                 </ag-grid-angular>
@@ -204,7 +204,7 @@
                     <h5>ARCHIVED LIST STATUS <span style="color: rgb(11, 67, 170);font-size: 20px;font-weight: 600;">-
                             {{rowData?.length}}</span> </h5>
                 </div>
-                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class"
                     rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs"
                     [rowData]="rowData" (gridReady)="onGridReady()" [enableCellTextSelection]="true">
                 </ag-grid-angular>
