--- a/src/app/admin/features/special_role/Bulk operaton/specialareachange/specialareachange.component.html
+++ b/src/app/admin/features/special_role/Bulk operaton/specialareachange/specialareachange.component.html
@@ -136,7 +136,7 @@
                     <h5>SUBSCRIBER <span style="color: rgb(11, 67, 170);font-size: 20px;font-weight: 600;">-
                             {{rowData?.length}}</span></h5>
                 </div>
-                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class"
                     style="max-height: 500px;overflow: scroll;" rowAnimation [rowSelection]="rowSelection"
                     [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
                     [rowSelection]="rowSelection" (selectionChanged)="onSelectionChanged()"
