--- a/src/app/admin/features/special_role/lcoinvoice/lcoinvoice.component.html
+++ b/src/app/admin/features/special_role/lcoinvoice/lcoinvoice.component.html
@@ -18,7 +18,7 @@
 </div>
 <div class="row d-flex align-items-center justify-content-center">
     <div class="col-12  col-md-12 col-sm-12 m-3">
-        <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class" rowAnimation
+        <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class" rowAnimation
             [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
             (gridReady)="onGridReady($event)" [enableCellTextSelection]="true">
         </ag-grid-angular>
