--- a/src/app/admin/features/operator_Login/Dialog/discountdialog/discountdialog.component.html
+++ b/src/app/admin/features/operator_Login/Dialog/discountdialog/discountdialog.component.html
@@ -137,7 +137,7 @@
         <!-- Package Title -->
         <div class="package-header">
             <span class="base-package">BASE PACKAGE</span>
-            <span class="prime-package">PRIME PACK</span>
+            <span class="prime-package">{{package_name}}</span>
         </div>
 
         <!-- Discount Table -->
