--- a/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
+++ b/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
@@ -45,7 +45,10 @@
                 </div>
             </div>
         </div>
-        <div *ngIf="operatorDetailsCount.isonlinepayment" class="col-12 col-md-5 d-flex justify-content-end align-item-center online_recharge">
+
+        <div *ngIf="isonlineRecharge"
+            class="col-12 col-md-5 d-flex justify-content-end align-item-center online_recharge">
+            <!-- <div  class="col-12 col-md-5 d-flex justify-content-end align-item-center online_recharge"> -->
             <div class="col-12 col-lg-12  mb-3">
                 <div class="card box d-flex flex-column justify-content-between align-items-center "
                     style="background: linear-gradient(180deg, #c44205, #9c4a01);" (click)="onOnlineRecharge()">
@@ -156,6 +159,7 @@
                     <div class="mt-2 mb-2 text-center text">Tomorrow Expiry</div>
                 </div>
             </div>
+
             <div class="col-6 col-lg-1-7 ">
                 <div class="card box d-flex flex-column justify-content-between p-3" (click)="openLCO_dashboard(5)">
                     <div class="d-flex justify-content-between w-100">
@@ -374,7 +378,15 @@
                 </div>
             </div>
             <div class="col-6 col-lg-3">
-                <div class="card box d-flex flex-column justify-content-between p-3" (click)="openLCO_dashboard(5)">
+                <div *ngIf="!rechargeHistory" class="card box d-flex flex-column justify-content-between p-3">
+                    <div class="d-flex justify-content-between w-100">
+                        <i class='bx bx-dollar-circle'></i>
+                        <span class="fw-bold">{{operatorDetailsCount?.yesterdayrechargeamount}}</span>
+                    </div>
+                    <div class="mt-2 mb-2 text-center text">Yesterday Recharge</div>
+                </div>
+                <div *ngIf="rechargeHistory" class="card box d-flex flex-column justify-content-between p-3"
+                    (click)="openLCO_dashboard(5)">
                     <div class="d-flex justify-content-between w-100">
                         <i class='bx bx-dollar-circle'></i>
                         <span class="fw-bold">{{operatorDetailsCount?.yesterdayrechargeamount}}</span>
@@ -383,7 +395,18 @@
                 </div>
             </div>
             <div class="col-6 col-lg-3">
-                <div class="card box d-flex flex-column justify-content-between p-3" (click)="openLCO_dashboard(4)">
+                <div *ngIf=" !rechargeHistory" class="card box d-flex flex-column justify-content-between p-3">
+                    <div class="d-flex justify-content-between w-100">
+                        <i class='bx bx-credit-card'></i>
+                        <span class="fw-bold">
+                            {{ operatorDetailsCount?.todayrechargeamount }}
+                        </span>
+                    </div>
+                    <div class="mt-2 mb-2 text-center text">Today Recharge</div>
+                </div>
+
+                <div *ngIf=" rechargeHistory"
+                    class="card box d-flex flex-column justify-content-between p-3" (click)="openLCO_dashboard(4)">
                     <div class="d-flex justify-content-between w-100">
                         <i class='bx bx-credit-card'></i>
                         <span class="fw-bold">
