--- a/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.html
+++ b/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.html
@@ -53,12 +53,14 @@
                                 <i class="fa fa-eye" style="font-size:15px;color: white;"></i>
                                 <div class="tooltip-content">Login Details</div>
                             </div>
-                            <div *ngIf="role != 'ROLE_SUBSCRIBER' && casform" class="icon-item d-flex align-item-center tooltip-container bttn"
+                            <div *ngIf="role != 'ROLE_SUBSCRIBER' && casform"
+                                class="icon-item d-flex align-item-center tooltip-container bttn"
                                 style="background-color: var(--sub-dashboard-icon);" (click)="getPdfCasformReport()">
                                 <i class="fa fa-download" aria-hidden="true" style="font-size:15px;color: white;"></i>
                                 <div class="tooltip-content">CAS Form</div>
                             </div>
-                            <div *ngIf="role != 'ROLE_SUBSCRIBER' &&  editDetails" class="icon-item d-flex align-item-center tooltip-container bttn"
+                            <div *ngIf="role != 'ROLE_SUBSCRIBER' &&  editDetails"
+                                class="icon-item d-flex align-item-center tooltip-container bttn"
                                 style="background-color: var(--sub-dashboard-icon);"
                                 (click)="openDialog('editDetails','')">
                                 <i class="fas fa-edit" style="font-size:14px;color: white;"></i>
@@ -106,7 +108,7 @@
                             </div>
 
                         </div>
-                        <div *ngIf="role != 'ROLE_SUBSCRIBER'" class="d-flex">
+                        <div *ngIf="role != 'ROLE_SUBSCRIBER'  && role != 'ROLE_SUBLCO'" class="d-flex">
                             <div class="col-6 col-md-4 d-flex justify-content-start align-items-center mb-1 text2">
                                 LCO Balance</div>
                             <div class="col-1 col-md-1 d-flex justify-content-center align-items-center mb-1 text2">
@@ -117,7 +119,7 @@
                                 {{subdetailsList?.opbalance}} {{subdetails?.opbalance}}
                             </div>
                         </div>
-                        <div *ngIf="role == 'ROLE_SUBSCRIBER'" class="d-flex">
+                        <div *ngIf="role == 'ROLE_SUBSCRIBER' || role == 'ROLE_SUBLCO'" class="d-flex">
                             <div class="col-6 col-md-4 d-flex justify-content-start align-items-center mb-1 text2">
                                 Subscriber Balance</div>
                             <div class="col-1 col-md-1 d-flex justify-content-center align-items-center mb-1 text2">
@@ -125,7 +127,7 @@
                             <div class="col-6 col-md-6 d-flex justify-content-start align-items-center"
                                 style="color: green;">
                                 <i class="fa-solid fa-indian-rupee-sign mx-2" style="color: green;"></i>
-                                {{subBalance}} 
+                                {{subBalance}} {{sublcoBalance}}
                             </div>
                         </div>
                         <div class="d-flex">
@@ -158,7 +160,8 @@
                                 <div class="tooltip-content">Change LCO</div>
                             </div>
 
-                            <div *ngIf="role != 'ROLE_SUBSCRIBER'" class="icon-item d-flex align-item-center tooltip-container  bttn"
+                            <div *ngIf="(role === 'ROLE_SUBLCO' && addsmartcard) || role != 'ROLE_SUBLCO' && role != 'ROLE_SUBSCRIBER'"
+                                class="icon-item d-flex align-item-center tooltip-container  bttn"
                                 style="background-color: var(--sub-dashboard-icon);"
                                 (click)="openDialog('addSmartcard','')">
                                 <i class="fa fa-plus" style="font-size:15px;color: white;"></i>
@@ -373,7 +376,7 @@
 
                         <div class="col-12 col-md-7  mobile2">
                             <div class="col-12 col-md-12 display_btn1">
-                                <div *ngIf="(role== 'ROLE_SUBLCO'  && Sublcopermissionlist.refresh) || role != 'ROLE_SUBLCO'    "
+                                <div *ngIf="(role== 'ROLE_SUBLCO'  && Sublcopermissionlist.refresh) || role != 'ROLE_SUBLCO'"
                                     class="col-12 col-md-6 display_btn1 justify-content-center align-items-center text3">
                                     <button class="btn  d-flex justify-content-between"
                                         (click)="openDialog('refresh','')" [disabled]="refresh">
@@ -650,6 +653,33 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <div *ngIf="role =='ROLE_OPERATOR' ||  role =='ROLE_SUBLCO'"
+                                            class="input_box  mb-3">
+                                            <div class="d-flex align-items-center justify-content-center">
+                                                <div class="col-6 col-md-6">
+                                                    <span class="me-2">Enter Amount</span>
+                                                </div>
+                                                <div class="col-6 col-md-6 value">
+                                                    <input type="text" placeholder="Enter Amount"
+                                                        [(ngModel)]="collectedPayAmount"
+                                                        (input)="onBalaceAmount($event)">
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div *ngIf="role === 'ROLE_OPERATOR' ||  role === 'ROLE_SUBLCO'"
+                                            class="input_box mb-3">
+                                            <div class="d-flex align-items-center justify-content-center">
+                                                <div class="col-6">
+                                                    <label for="commentInput" class="me-2">Comment</label>
+                                                </div>
+                                                <div class="col-6 value">
+                                                    <input id="commentInput" type="text" placeholder="Enter Comment"
+                                                        [(ngModel)]="comment">
+                                                </div>
+                                            </div>
+                                        </div>
+
                                         <div class="input_box  mb-3">
                                             <div class="d-flex align-items-center justify-content-center">
                                                 <div class="col-6 col-md-6">
@@ -660,7 +690,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="  mb-3">
+                                        <div *ngIf="role !='ROLE_OPERATOR' ||  role !='ROLE_SUBLCO'" class="mb-3">
                                             <div class="d-flex align-items-center justify-content-center">
                                                 <div class="input_box col-6 col-md-6">
                                                     <span class="me-2">Customer pay </span>
@@ -681,6 +711,9 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- -----------------------------------rechargetype------------------------------------ -->
+
+                            <!-- ============================================================================================================================================ -->
                             <div *ngIf="managePackagetable" class="confirmation-dialog">
                                 <div class=" d-flex justify-content-start align-item-center  mb-2">
                                     <button *ngIf="!confirmation" type="button" class="btn2 confirm me-2 bttn"
@@ -691,9 +724,15 @@
                                         [ngStyle]="{'background': isDisabled ? 'rgb(226 176 110)' : 'rgb(243, 146, 19)'}"
                                         [disabled]="isDisabled"
                                         (click)="rechargetoggleConfirmation1()">Confirmation</button>
-                                    <button type="button" class="btn2  recharge bttn me-2" [disabled]="isRecharge"
+                                    <button *ngIf="role == 'ROLE_OPERATOR' ||  role == 'ROLE_SUBLCO'" type="button"
+                                        class="btn2  recharge bttn me-2" [disabled]="isRecharge"
+                                        [ngStyle]="{'background': isRecharge ? 'rgb(160 187 240)' : 'rgb(8, 79, 212)'}"
+                                        (click)="onRechargeType()">Recharge</button>
+                                    <button *ngIf="role != 'ROLE_OPERATOR' &&  role != 'ROLE_SUBLCO' " type="button"
+                                        class="btn2  recharge bttn me-2" [disabled]="isRecharge"
                                         [ngStyle]="{'background': isRecharge ? 'rgb(160 187 240)' : 'rgb(8, 79, 212)'}"
                                         (click)="recharge1()">Recharge</button>
+                                    <!-- (click)="recharge1()" -->
                                     <button *ngIf="cancel_btn" type="button" class="btn2 bttn "
                                         style="background-color: red;" (click)="toggleConfirmation()">Cancel</button>
                                 </div>
@@ -708,9 +747,19 @@
                                         [ngStyle]="{'background': isDisabled ? 'rgb(226 176 110)' : 'rgb(243, 146, 19)'}"
                                         [disabled]="isDisabled"
                                         (click)="rechargetoggleConfirmation()">Confirmation</button>
-                                    <button type="button" class="btn2  recharge bttn me-2" [disabled]="isRecharge"
+
+                                    <button *ngIf="role == 'ROLE_OPERATOR' || role == 'ROLE_SUBLCO' " type="button"
+                                        class="btn2  recharge bttn me-2" [disabled]="isRecharge"
+                                        [ngStyle]="{'background': isRecharge ? 'rgb(160 187 240)' : 'rgb(8, 79, 212)'}"
+                                        (click)="onRechargeType()">Recharge</button>
+                                    <button *ngIf="role != 'ROLE_OPERATOR' && role != 'ROLE_SUBLCO'  " type="button"
+                                        class="btn2  recharge bttn me-2" [disabled]="isRecharge"
                                         [ngStyle]="{'background': isRecharge ? 'rgb(160 187 240)' : 'rgb(8, 79, 212)'}"
                                         (click)="recharge()">Recharge</button>
+                                    <!-- <button type="button" class="btn2  recharge bttn me-2" [disabled]="isRecharge"
+                                        [ngStyle]="{'background': isRecharge ? 'rgb(160 187 240)' : 'rgb(8, 79, 212)'}"
+                                        (click)="onRechargeType()">Recharge</button> -->
+                                    <!-- (click)="recharge()" -->
                                     <button *ngIf="cancel_btn" type="button" class="btn2  bttn "
                                         style="background-color: red;" (click)="toggleConfirmation()">Cancel</button>
                                 </div>
@@ -729,4 +778,80 @@
             </mat-accordion>
         </div>
     </section>
+</div>
+<div *ngIf="rechargeTypeDialog" class="recharge-dialog">
+    <div class="mobileview">
+        <div class="mb-3">
+            <!-- <h2 class="title" ></h2> -->
+            <h3 class="sub-title mt-3">PAYMENT COLLECTION DETAILS</h3>
+            <h3 class="highlight" [ngClass]="{
+                'green-text': billTypeValue?.description === 'Fully Paid',
+                'orange-text': billTypeValue?.description === 'Excess Paid',
+                'blue-text': billTypeValue?.description === 'Partially Paid',
+                'red-text': billTypeValue?.description === 'Unpaid'
+              }">{{billTypeValue?.description}} !!!</h3>
+            <div class="p-3">
+                <div class="input_box  mb-3">
+                    <div class="d-flex align-items-center justify-content-center">
+                        <div class="col-6 col-md-4">
+                            <span class="me-2">Customer Amount </span>
+                        </div>
+                        <div class="col-6 col-md-6 value">
+                            <input type="text" placeholder="Customer Amount" [(ngModel)]="customerPayAmount" readonly>
+                        </div>
+                    </div>
+                </div>
+                <div class="input_box  mb-3">
+                    <div class="d-flex align-items-center justify-content-center">
+                        <div class="col-6 col-md-4">
+                            <span class="me-2">Collected Amount</span>
+                        </div>
+                        <div class="col-6 col-md-6 value">
+                            <input type="text" placeholder="Collected Amount" [(ngModel)]="collectedPayAmount" readonly>
+                        </div>
+                    </div>
+                </div>
+                <div class="input_box  mb-3">
+                    <div class="d-flex align-items-center justify-content-center">
+                        <div class="col-6 col-md-4">
+                            <span class="me-2">Balance Amount</span>
+                        </div>
+                        <div class="col-6 col-md-6 value">
+                            <input type="text" placeholder="Balance Amount" [(ngModel)]="balanceamount" [ngClass]="{
+                                'red-text': balanceamount < 0,
+                                'black-text': balanceamount == 0,
+                                'green-text': balanceamount > 0
+                              }" readonly>
+                        </div>
+                    </div>
+                </div>
+                <div class="input_box  mb-3">
+                    <div class="d-flex align-items-center justify-content-center">
+                        <div class="col-6 col-md-4">
+                            <span class="me-2">Old Excess Amount </span>
+                        </div>
+                        <div class="col-6 col-md-6 value">
+                            <input type="text" placeholder="Old Balance" [(ngModel)]="excessAmount" readonly>
+                        </div>
+                    </div>
+                </div>
+                <div class="input_box  mb-3">
+                    <div class="d-flex align-items-center justify-content-center">
+                        <div class="col-6 col-md-4">
+                            <span class="me-2">New Excess Amount </span>
+                        </div>
+                        <div class="col-6 col-md-6 value">
+                            <input type="text" placeholder="New Balance" [(ngModel)]="newExcessAmount">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <p class="confirm1">DO YOU WANT TO UPDATE THIS PACKAGE</p>
+
+            <div class="actions">
+                <button mat-raised-button color="accent" class="mx-3" (click)="recharge()">UPDATE</button>
+                <button mat-raised-button color="primary" (click)="onRechargeType1()">CANCEL</button>
+            </div>
+        </div>
+    </div>
 </div>
