--- a/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.scss
+++ b/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.scss
@@ -765,3 +765,77 @@ label {
 .custom {
   background-color: lightslategrey;
 }
+
+// ====================================================================================
+.mobileview {
+  background-color: white;
+  padding: 4%;
+}
+
+.sub-title {
+  text-align: center;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.highlight {
+  color: blue;
+  text-align: center;
+  font-weight: bold;
+}
+
+.details {
+  margin-top: 1rem;
+
+  p {
+    margin: 5px 0;
+  }
+
+  .green {
+    color: green;
+  }
+
+  .red {
+    color: red;
+  }
+}
+
+.confirm1 {
+  text-align: center;
+  font-weight: 600;
+  margin: 1rem 0;
+  color: darkred;
+  
+}
+
+.actions {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.red-text {
+  color: red;
+}
+
+.green-text {
+  color: green;
+}
+
+.black-text {
+  color: black;
+}
+.green-text {
+  color: green;
+}
+
+.orange-text {
+  color: orange;
+}
+
+.blue-text {
+  color: blue;
+}
+
+.red-text {
+  color: red;
+}
