--- a/src/app/admin/features/subscriber/subscriberdialogue/subscriberdialogue.component.scss
+++ b/src/app/admin/features/subscriber/subscriberdialogue/subscriberdialogue.component.scss
@@ -761,3 +761,63 @@ body {
 .custom{
   background-color: lightslategrey;
 }
+// ==================================================================================================
+// .title {
+//   text-align: center;
+//   font-size: 20px;
+//   font-weight: bold;
+// }
+
+// .sub-title {
+//   text-align: center;
+//   font-size: 16px;
+//   font-weight: 600;
+// }
+
+// .highlight {
+//   color: blue;
+//   text-align: center;
+//   font-weight: bold;
+// }
+
+// .details {
+//   margin-top: 1rem;
+//   p {
+//     margin: 5px 0;
+//   }
+//   .green {
+//     color: green;
+//   }
+//   .red {
+//     color: red;
+//   }
+// }
+.black-text {
+  color: black;
+}
+.green-text {
+  color: green;
+}
+
+.orange-text {
+  color: orange;
+}
+
+.blue-text {
+  color: blue;
+}
+
+.red-text {
+  color: red;
+}
+.confirm1 {
+  text-align: center;
+  font-weight: 600;
+  color: green;
+  margin: 1rem 0;
+}
+
+.actions {
+  display: flex;
+  justify-content: space-evenly;
+}
